--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -109,10 +109,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <button type="submit">Atualizar</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row justify-center">
-                        <button type="submit">Cadastrar</button>
                     </div>
                 </form>
             </div>
