--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -23,6 +23,20 @@ button{
     cursor: pointer;
 }
 
+button{
+    background-color: var(--dark-green);
+    height: 35px;
+    width: 110px;
+    margin: 5px auto;
+    border-radius: 10px;
+    color: white;
+    transition: background-color 0.2s;
+}
+
+button:hover{
+    background-color: var(--light-green);
+}
+
 .avatar {
     width: 100%;
     height: 100%;
