feature:@vinicius - ajusta problema no css dos botoes de perfil e editar perfil

--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -109,7 +109,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row white-background">
                                 <button type="submit">Atualizar</button>
                             </div>
                         </div>
