--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -19,11 +19,7 @@ small{
     font-family: Open Sans, sans-serif;
 }
 
-button{
-    cursor: pointer;
-}
-
-button{
+.white-background button{
     background-color: var(--dark-green);
     height: 35px;
     width: 110px;
@@ -31,6 +27,10 @@ button{
     border-radius: 10px;
     color: white;
     transition: background-color 0.2s;
+}
+
+.white-background button:hover{
+    background-color: var(--light-green);
 }
 
 button:hover{
