--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -44,7 +44,7 @@
             <h1>Biografia</h1>
             <p th:text="${user.getBio()}"></p>
         </div>
-        <div th:if="${#authentication.getPrincipal().id == user.getId()}">
+        <div th:if="${#authentication.getPrincipal().id == user.getId()}" class="white-background">
             <button onclick="document.querySelector('#link').click()">Editar perfil</button>
             <a id="link" th:href="@{/user/edit}"></a>
         </div>
