Fix: Eduardo Lessa Erro dos toasts não permitindo o carregamento correto das páginas.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <header th:replace="fragments/header.html :: header"></header>
-    <div th:replace="fragments/toast.html :: toasts">
     </div>
     <h1>Home</h1>
     <h2>Welcome to the jungle!</h2>
+    <div th:replace="fragments/toast.html :: toasts"></div>
 </body>
 </html>
