--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,22 +8,20 @@
 </head>
 <body>
     <header th:replace="fragments/header.html :: header"></header>
-    <div th:replace="fragments/toast.html :: toasts">
-    </div>
     <div class="white-background">
         <img class="logo-img" alt="Logo Townsq" src="/img/logo.svg" />
         <form role="form" th:action="@{/signup}" th:method="post" th:object="${user}">
             <div class="form-control">
                 <label for="name">Nome</label>
-                <input autofocus required type="text" name="name" id="name"/>
+                <input autofocus  type="text" name="name" id="name"/>
             </div>
             <div class="form-control">
                 <label for="email">Email</label>
-                <input required type="email" name="email" id="email"/>
+                <input  type="email" name="email" id="email"/>
             </div>
             <div class="form-control">
                 <label for="password">Senha</label>
-                <input required type="password" name="password" id="password"/>
+                <input type="password" name="password" id="password"/>
             </div>
             <button type="submit">Cadastrar</button>
 
@@ -33,6 +31,7 @@
             </div>
         </form>
     </div>
+    <div th:replace="fragments/toast.html :: toasts"></div>
 </body>
 
 </html>
