--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -176,6 +176,14 @@ button:hover{
     align-items: center;
 }
 
+.self-start{
+    align-self: flex-start;
+}
+
+.self-end{
+    align-self: flex-end;
+}
+
 .col {
     display: flex;
     flex-direction: column;
@@ -389,6 +397,24 @@ button:hover{
     color: #FFFFFF;
     font-weight: bolder;
     font-size: 0.7rem;
+}
+
+.status-pill-questions {
+    border-radius: 500px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    height: 1rem;
+    width: 9em;
+    margin-bottom: 0.5rem;
+}
+
+.status-pill-questions small {
+    text-align: center;
+    color: #FFFFFF;
+    font-weight: bolder;
 }
 
 .bg-offwhite{
