--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:replace="fragments/head :: header"></div>
     <title>Usuário</title>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/user.css}">
 </head>
 <body>
-<div th:insert="fragments/header.html"></div>
+<header th:replace="fragments/header.html :: header"></header>
 <div class="background" th:if="${user}">
 
     <div class="profile">
