--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -43,7 +43,7 @@
 
 .background {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto;
     padding-top: 2%;
     background-color: #F4F4F4;
