Adicionei a notacao na bio, na pagina de editar usuario

--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -92,6 +92,7 @@
                                     <div class="form-control">
                                         <label for="bio">Bio</label>
                                         <textarea type="text" name="bio" id="bio" th:text="${user.getBio()}"></textarea>
+                                        <label id="annotation" for="bio">A sua bio será exibida para todos os usuários </label>
                                     </div>
                                 </div>
                             </div>
