--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -11,6 +11,10 @@ header{
     background-color: var(--light-green);
 }
 
+.header-admin{
+    background-color: var(--admin-green);
+}
+
 header nav {
     padding: 10px;
     display: flex;
