--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       lang="br">
 <body>
-    <header th:fragment="header" th:classappend="${#request.userPrincipal} ? 'header-dark' : 'header-light'">
+    <header th:fragment="header" th:classappend="!${#request.userPrincipal} ? 'header-light' : (${#request.isUserInRole('ROLE_ADMIN')} ? 'header-admin' : 'header-dark')">
         <nav>
             <div sec:authorize="isAnonymous()">
                 <img class="logo-img-header" alt="Logo Townsq" src="/img/logo.svg" />
