feature:@vinicius - implementa a apresentação dos campos de empresa e website do usuário na tela de perfil

--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -55,6 +55,11 @@
     position: relative;
 }
 
+.company-info {
+    width: 1100px;
+    margin-top: 20px;
+}
+
 .bio {
     width: 1100px;
     margin-top: 20px;
