feat: Adriana Serpa
Criação da model de pergunta

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
                 <img src="/img/user.svg" alt="Imagem de perfil"/>
             </a>
             <div sec:authorize="isAuthenticated()">
-                <button onclick="location.href='/users'" class="button-green-ease">Perguntar</button>
+                <button onclick="location.href='/question/create'" class="button-green-ease">Perguntar</button>
             </div>
             <div sec:authorize="isAnonymous()">
                 <button onclick="location.href='/signup'" class="button-green-ease">Cadastrar</button>
