Feature:@vinicius,@willian - Mostra empresa e website na tela de editar perfil

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -417,6 +417,10 @@ button:hover{
     font-weight: bolder;
 }
 
+.company-values{
+    font-weight: lighter
+}
+
 .bg-offwhite{
     background-color: #F4F4F4;
 }
