--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -41,11 +41,11 @@
         </div>
         <div class="line"></div>
         <div class="company-info">
-            <div class="row" th:if="${user.getCompany().length()}">
-                <h3>Empresa:&nbsp</h3> <h3 style="font-weight: lighter" th:text="${user.getCompany()}"></h3>
+            <div class="row" th:if="${user.getCompany()}">
+                <h3>Empresa:&nbsp</h3> <h3 class="company-values" th:text="${user.getCompany()}"></h3>
             </div>
-            <div class="row" th:if="${user.getWebsite().length()}">
-                <h3>Site:&nbsp</h3> <h3 style="font-weight: lighter"><a th:href="@{{id}(id=${user.getWebsite()})}" target="_blank" th:text="${user.getWebsite()}"></a></h3>
+            <div class="row" th:if="${user.getWebsite()}">
+                <h3>Site:&nbsp</h3> <h3 class="company-values" ><a th:href="@{{id}(id=${user.getWebsite()})}" target="_blank" th:text="${user.getWebsite()}"></a></h3>
             </div>
         </div>
         <div class="bio">
