fix:04/@gabriel.silva - Exemplo adicionado de um URL válido

--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -90,6 +90,7 @@
                                 <div class="form-control">
                                     <label for="website">Site</label>
                                     <input type="text" name="website" id="website" th:value="${user.getWebsite()}"/>
+                                    <label id="example" for="bio">Ex.: https://www.seusite.com </label>
                                 </div>
                             </div>
 
