--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -62,6 +62,7 @@ button:hover{
     height: 100%;
     background-color: lightgray;
     border-radius: 50%;
+    border-width: 0px !important;
 }
 
 .question-card-divider{
