--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,10 @@
             <a href="#" id="ask-anchor" th:classappend="${#request.userPrincipal} ? 'show-only-mobile' : ''">Perguntar</a>
             <a sec:authorize="isAnonymous()" href="/user/edit" id="profile-anchor-link">Perfil</a>
             <a sec:authorize="isAuthenticated()" th:href="'/user/' + ${#authentication.getPrincipal().getId()}" id="profile-anchor">
-                <img src="/img/user.svg" alt="Imagem de perfil"/>
+                <img th:if="${user == null || user.getImage() == null}" src="/img/user.svg" alt="Imagem de perfil"/>
+                <div style="width: 40px; height: 40px" th:if="${user != null && user.getImage() != null}">
+                    <img class="avatar" th:src="${user.getImage()}" alt="Imagem de perfil"/>
+                </div>
             </a>
             <div sec:authorize="isAuthenticated()">
                 <button onclick="location.href='/users'" class="button-green-ease">Perguntar</button>
