--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -59,6 +59,41 @@
     color: var(--strong-green);
 }
 
+.question-card-actions{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.comment-actions{
+    display: flex;
+    flex-direction: row;
+}
+
+.action-icons{
+    display: flex;
+    flex-direction: column;
+    width: min-content;
+    margin-left: 0.5rem;
+    align-items: center;
+}
+
+.action-icons-comment{
+    display: flex;
+    flex-direction: row;
+    margin-left: 0.3rem;
+    align-items: center;
+}
+
+.action-icons-comment img{
+    width: 20px;
+    height: 20px;
+}
+
+.action-icons-comment a:first-child{
+    margin-right: 0.3rem;
+}
+
 .question-page-main-card {
     padding: 16px;
     display: flex;
@@ -67,6 +102,7 @@
     box-shadow: 0 0 10px 3px rgba(0,0,0,0.25);
     margin-bottom: 1em;
     justify-content: space-between;
+    width: 100%;
 }
 
 .question-page-main-card p{
