--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -60,6 +60,7 @@ button:hover{
 .avatar {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     background-color: lightgray;
     border-radius: 50%;
     border-width: 0px !important;
