--- a/src/main/resources/templates/questionForm.html
+++ b/src/main/resources/templates/questionForm.html
@@ -33,6 +33,8 @@
         <div class="white-background question-create-button">
             <button type="submit">Enviar Pergunta</button>
         </div>
+
+        <input th:type="hidden" id="id" th:field="*{id}">
     </form>
     </div>
 </body>
