--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div sec:authorize="isAuthenticated()" th:if="${#authentication.getPrincipal().id==question.getUser().getId()}" class="action-icons">
-                <a href="#"><img alt="editar" th:src="@{/img/icons/lapis.svg}"/></a>
+                <a th:href="@{/question/edit/{id}(id=${question.getId()})}"><img alt="editar" th:src="@{/img/icons/lapis.svg}"/></a>
                 <a th:href="@{/question/delete/{id}(id=${question.getId()})}"><img alt="deletar" th:src="@{/img/icons/lixeira.svg}"/></a>
             </div>
         </div>
