--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -16,7 +16,7 @@
         <div class="question-card-actions">
             <div class="question-page-main-card">
                 <div class="main-card-left">
-                    <img alt="Imagem do perfil do usuário" src="img/user.svg"/>
+                    <img alt="Imagem do perfil do usuário" src="/img/user.svg"/>
                     <div class="name-last-access">
                         <p th:text="${question.getUser().getName()}"></p>
                         <small>2 horas</small>
@@ -78,7 +78,7 @@
         <div class="question-answers">
             <div class="answer-card">
                 <div class="answer-card-left">
-                    <img alt="Imagem do perfil do usuário" src="img/user.svg"/>
+                    <img alt="Imagem do perfil do usuário" src="/img/user.svg"/>
                     <div class="name-last-access">
                         <p>Bruno Almeida</p>
                         <small>2 horas</small>
@@ -110,7 +110,7 @@
             </div>
             <div class="answer-card">
                 <div class="answer-card-left">
-                    <img alt="Imagem do perfil do usuário" src="img/user.svg"/>
+                    <img alt="Imagem do perfil do usuário" src="/img/user.svg"/>
                     <div class="name-last-access">
                         <p>Bruno Almeida</p>
                         <small>2 horas</small>
